--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BusinessLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializer.cs" />
     <Compile Include="Validering.cs" />
   </ItemGroup>
   <ItemGroup>
