--- a/DL/DL.csproj
+++ b/DL/DL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DataLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Serializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
