--- a/DL/DL.csproj
+++ b/DL/DL.csproj
@@ -45,5 +45,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Serializer.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Pod\Pod.csproj">
+      <Project>{dc6590d1-2aac-4fb1-98f1-ccd5523af321}</Project>
+      <Name>Pod</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
