--- a/Pod/Pod.csproj
+++ b/Pod/Pod.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Episode.cs" />
+    <Compile Include="Models\Feed.cs" />
     <Compile Include="PodLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
