--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BusinessLayer.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\EpisodeController.cs" />
+    <Compile Include="Controllers\FeedController.cs" />
     <Compile Include="FilterMaterial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validering.cs" />
