--- a/DL/DL.csproj
+++ b/DL/DL.csproj
@@ -41,11 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataLayer.cs" />
-    <Compile Include="DL.Kategorier.cs" />
-    <Compile Include="DL.Poddar.cs" />
+    <Compile Include="KategoriIRepository.cs" />
+    <Compile Include="PoddarIRepository.cs" />
     <Compile Include="IRepository.cs" />
-    <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Serializer.cs" />
   </ItemGroup>
